add led state to robot-state API
