# api/openapi/openapi.gen.yml
@@ -1479,6 +1479,65 @@ components:
         - espSerialConnection
         - picSerialConnection
         - rfidUsbConnection
+    LedConnection:
+      type: object
+      properties:
+        connected:
+          type: boolean
+          example: true
+          description: Whether the led is connected
+          x-order: 1
+        lastConnectedAt:
+          type: string
+          format: date-time
+          nullable: true
+          example: '2025-01-01T00:00:00Z'
+          description: The last connected at time of the led
+          x-order: 2
+        error:
+          type: string
+          example: error message
+          nullable: true
+          description: The error message of the led
+          x-order: 3
+      required:
+        - connected
+        - lastConnectedAt
+        - error
+    LedMode:
+      type: string
+      enum:
+        - 'OFF'
+        - 'ON'
+        - BLINK
+      example: 'OFF'
+      description: The mode of the led
+      x-go-type: string
+    LedState:
+      type: object
+      properties:
+        mode:
+          $ref: '#/components/schemas/LedMode'
+          x-order: 1
+        updatedAt:
+          type: string
+          format: date-time
+          example: '2025-01-01T00:00:00Z'
+          description: The updated at time of the led
+          x-order: 2
+      required:
+        - mode
+        - updatedAt
+    Led:
+      type: object
+      properties:
+        connection:
+          $ref: '#/components/schemas/LedConnection'
+        state:
+          $ref: '#/components/schemas/LedState'
+      required:
+        - connection
+        - state
     RobotStateResponse:
       type: object
       properties:
@@ -1512,6 +1571,17 @@ components:
         appConnection:
           $ref: '#/components/schemas/AppConnection'
           x-order: 10
+        leds:
+          type: object
+          properties:
+            systemLed:
+              $ref: '#/components/schemas/Led'
+            alertLed:
+              $ref: '#/components/schemas/Led'
+          x-order: 11
+          required:
+            - systemLed
+            - alertLed
       required:
         - battery
         - charge
@@ -1523,6 +1593,7 @@ components:
         - cargo
         - cargoDoorMotor
         - appConnection
+        - leds
     LimitSwitch:
       type: object
       properties:
